--- a/core/templates/partials/navbar.html
+++ b/core/templates/partials/navbar.html
@@ -6,18 +6,14 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExample07XL">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Todos</a>
-            </li>
-        </ul>
+
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-                <a class="nav-link" href="/signup">Login</a>
+            {% comment %} <li class="nav-item dropdown">
+                <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="/login">Sign up</a>
-            </li>
+                <a class="nav-link" href="/signup">Sign up</a>
+            </li> {% endcomment %}
         </ul>
       </div>
     </div>
